Closed
Bug 1007187
Opened 11 years ago
Closed 11 years ago
enableSPSProfilingWithSlowAssertions returns itself when called a second time
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla32
People
(Reporter: jruderman, Assigned: bbouvier)
Details
(Keywords: testcase)
Attachments
(1 file)
|
1.71 KB,
patch
|
djvj
:
review+
|
Details | Diff | Splinter Review |
js> enableSPSProfilingWithSlowAssertions()
js> enableSPSProfilingWithSlowAssertions()
function enableSPSProfilingWithSlowAssertions() {
[native code]
}
(I expected it to return undefined both times.)
Comment 1•11 years ago
|
||
Another issue from the recent SPS function change.
Flags: needinfo?(kvijayan)
| Assignee | ||
Comment 2•11 years ago
|
||
If that can help fuzzers...
Attachment #8434253 -
Flags: review?(kvijayan)
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → benj
Status: NEW → ASSIGNED
Updated•11 years ago
|
Attachment #8434253 -
Flags: review?(kvijayan) → review+
| Assignee | ||
Comment 3•11 years ago
|
||
Thanks for the quick review!
https://hg.mozilla.org/integration/mozilla-inbound/rev/72396a537344
Flags: needinfo?(kvijayan)
Comment 4•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in
before you can comment on or make changes to this bug.
Description
•