Bug 1007187: Make enableSPSProfilingWithSlowAssertions() return undefined; r=djvj